--- a/client/index.html
+++ b/client/index.html
@@ -1,13 +1,17 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>Natural Language DB Interface</title>
   </head>
   <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
+    <header>
+      <h1>Natural Language DB Interface</h1>
+    </header>
+    <main id="root"></main>
+    <noscript>
+      <h1>JavaScript is required to run this application.</h1>
+    </noscript>
   </body>
 </html>
