Changed Natural Language DB Interface to Little Hero AI in index.html

--- a/client/index.html
+++ b/client/index.html
@@ -1,13 +1,13 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Natural Language DB Interface</title>
+    <title>SLittle Hero AI</title>
   </head>
   <body>
     <header>
-      <h1>Natural Language DB Interface</h1>
+      <h1>Little Hero AI</h1>
     </header>
     <main id="root"></main>
     <noscript>
